--- a/sem1/BinaryHeap/BinaryHeap.vcxproj
+++ b/sem1/BinaryHeap/BinaryHeap.vcxproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" 
-  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -142,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="BinaryHeap.class\BinaryHeap.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SortingAlgorithms.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
