--- a/sem1/BinaryHeap/BinaryHeap.vcxproj.filters
+++ b/sem1/BinaryHeap/BinaryHeap.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="BinaryHeap.class\BinaryHeap.cpp">
       <Filter>Исходные файлы\BinaryHeap.class</Filter>
     </ClCompile>
+    <ClCompile Include="SortingAlgorithms.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
